   min and max, and the STL definitions of min and max.
   
All Changes
-----------
Added CTab class
Added CTabbedMDI class
Added TabDemo sample
Added Docking TabbedMDI sample
Added CFrame::SetupToolbar
Added CFrame::m_bUseToolbar
Added CContainer::SetupToolbar
Added CDockable::GetDockTopLevel
Added CDockable::IsRelated
Added CToolbar::GetToolbarData
Changed CToolbar::SetImages
Changed CToolbar::SetBitmap
Changed CToolbar::AddBitmap
Changed CToolbar::ReplaceBitmap
Renamed CDockable::CheckDockables to CDockable::VerifyDockables
   

Version 6.4.1
=============
This release has the following bug fixes:
- Assertions in CContainer reported by VS2005(express) and VS2008(express)
- Definition of OPENFILENAME_SIZE_VERSION_400 added for VS6 

Version 6.4
===========

Major Changes
------------
* Docking:
  - Added tabbed docking container with optional toolbar
  - Added close button to the caption of docked windows
  - Added 'outer' docking  ie. docking at the side of the frame rather 
      than inside another dockable.
  - Added a second docking sample demonstrating containers
  - Added save/restore dock layout to docking samples
  - Added Close All Dockables and Default Dock Layout to docking samples
  - Added Win98 and WinME support for docking. 
* Added Region support to CDC class.
* Notepad sample enhancements:
  - Now capable of handling Unicode text
* Themes sample now demonstrates a ComboBoxEx control in its toolbar  
 
All Changes
-----------
Added CContainer class
Added CTabPage class  (a nested class of CContainer)
Added CTargetBottom   (a nested class of CDockable)
Added CTargetCentre   (a nested class of CDockable)
Added CTargetLeft     (a nested class of CDockable)
Added CTargetRight    (a nested class of CDockable)
Added CTargetTop      (a nested class of CDockable)
Added CDialog::SetDlgParent
Added CDC::CreateEllipticRegion
Added CDC::CreateEllipticRegionIndirect
Added CDC::CreatePolygonRgn
Added CDC::CreatePolyPolygonRgn
Added CDC::CreateRectRgn